# refinecv-backend

./: .env  main.py  pyproject.toml
api/v1/doc_management/: doc_management_routes.py  doc_management_service.py  extract_text.py
api/v1/generate_resume_text/: generate_ai_text_route.py
api/v1/history/: history_routes.py  history_service.py
api/v1/payment/: payment_routes.py
api/v1/user/: google_auth.py  user_routes.py  user_service.py
core/: config.py  constant.py  utils.py
middleware/: get_current_user.py
prompts/: clean_jd_system_prompt.txt  feedback_system_prompt.txt  feedback_system_prompt2.txt  summarize_system_prompt.txt
services/: AI_service.py  S3Storage.py  mongodb.py
